--- a/studentwater2/studentwater2.csproj
+++ b/studentwater2/studentwater2.csproj
@@ -73,12 +73,15 @@
     <Content Include="blog-post.html" />
     <Content Include="contact.html" />
     <Content Include="css\aboutstyle.css" />
+    <Content Include="css\amb.css" />
     <Content Include="css\bootstrap-modal-bs3patch.css" />
     <Content Include="css\bootstrap-modal.css" />
     <Content Include="css\bootstrap.css" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\jquery.fs.wallpaper.css" />
     <Content Include="css\modern-business.css" />
+    <Content Include="css\piechart.css" />
+    <Content Include="css\projects.css" />
     <Content Include="css\teamstyle.css" />
     <Content Include="faq.html" />
     <Content Include="full-width.html" />
@@ -88,6 +91,7 @@
     <Content Include="packages.config" />
     <Content Include="LICENSE" />
     <Content Include="README.md" />
+    <Content Include="css\projectdrop.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -96,7 +100,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="portfolio-1-col.html" />
+    <Content Include="news.html" />
     <Content Include="portfolio-2-col.html" />
     <Content Include="portfolio-3-col.html" />
     <Content Include="portfolio-4-col.html" />
